methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:1: error: Missing closing brace `}' assumed here
override def run() {for (i<-1 to 3) {motif();}
^MethodsPicture:1: error: expected start of definition
override def run() {for (i<-1 to 3) {motif();}
         ^MethodsPicture:5: error: expected class or object definition
def faireV(c:Color) {setCouleurBrosse(c);avance();leveBrosse();baisseBrosse();avance();gauche; avance; leveBrosse();baisseBrosse(); recule(); droite; avance; leveBrosse();baisseBrosse();avance();gauche();}
^MethodsPicture:7: error: expected class or object definition
def motif()
^MethodsPicture:8: error: expected class or object definition
{
^