methods.picture.MethodsPicture.scala.code
override def run() {for (i<-1 to 3) {motif();}
}


def faireV(c:Color) {setCouleurBrosse(c);avance();leveBrosse();baisseBrosse();avance();gauche; avance; leveBrosse();baisseBrosse(); recule(); droite; avance; leveBrosse();baisseBrosse();avance();gauche();}

def motif()
{
for (i<-1 to 3)
   {faireV(Color.YELLOW); 
    faireV(Color.RED);
    faireV(Color.BLUE);
    faireV(Color.GREEN);
    for (k<-1 to 5)
        {avance();}
   }
  gauche();
  for (k<-1 to 5)
        {avance();}
  droite();
    
    
    
    
    
    
 